Fix dark mode toggle on older browsers

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -3,15 +3,14 @@
 */
 
 html {
-  @media (prefers-color-scheme: light) {
-    &:not([data-mode]),
-    &[data-mode='light'] {
-      @include light-scheme;
-    }
+  /* Default theme for browsers that don't support prefers-color-scheme */
+  &:not([data-mode]),
+  &[data-mode='light'] {
+    @include light-scheme;
+  }
 
-    &[data-mode='dark'] {
-      @include dark-scheme;
-    }
+  &[data-mode='dark'] {
+    @include dark-scheme;
   }
 
   @media (prefers-color-scheme: dark) {
